# 1009C-

./: .gitignore  Account.cpp  Account.h  CMakeLists.txt  LICENSE.md  README.md  Student.cpp  Student.h  Teacher.cpp  Teacher.h  default.sql  header.h  main.cpp  mysqlconnector.cpp  mysqlconnector.h  questions.cpp  questions.h  quiz.cpp  quiz.h  result.cpp  result.h
Qtgui_v12/: Qtgui_v12.pro  Qtgui_v12.sln  Qtgui_v12.vcxproj  Qtgui_v12.vcxproj.filters  index.cpp  index.h  index.ui  main.cpp  studentquizresult.cpp  studentquizresult.h  studentquizresult.ui  studenttakequiz.cpp  studenttakequiz.h  studenttakequiz.ui  studentviewquiz.cpp  studentviewquiz.h  studentviewquiz.ui  studentviewresult.cpp  studentviewresult.h  studentviewresult.ui  teachercreatequiz.cpp  teachercreatequiz.h  teachercreatequiz.ui  teachereditqns.cpp  teachereditqns.h  teachereditqns.ui  teachereditquiz.cpp  teachereditquiz.h  teachereditquiz.ui  teacherviewquiz.cpp  teacherviewquiz.h  teacherviewquiz.ui
Qtgui_v12/Debug/: Qtgui_v12.ilk  moc_index.cpp  moc_studentquizresult.cpp  moc_studenttakequiz.cpp  moc_studentviewquiz.cpp  moc_studentviewresult.cpp  moc_teachercreatequiz.cpp  moc_teachereditqns.cpp  moc_teachereditquiz.cpp  moc_teacherviewquiz.cpp
Qtgui_v12/GeneratedFiles/: ui_index.h  ui_studentquizresult.h  ui_studenttakequiz.h  ui_studentviewquiz.h  ui_studentviewresult.h  ui_teachercreatequiz.h  ui_teachereditqns.h  ui_teachereditquiz.h  ui_teacherviewquiz.h
Qtgui_v12/x64/Debug/Qtgui_v12.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+7 more)
v/: 1009_2017-04-06.sql.txt
